--- a/web_app/templates/books.html
+++ b/web_app/templates/books.html
@@ -1,4 +1,12 @@
-{% extends "layout.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    {% extends "layout.html" %}
 
 {% block title %}
     <title>Books Page</title>
@@ -22,3 +30,5 @@
     {% endif %}
 
 {% endblock %}
+</body>
+</html>
