--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -1,12 +1,29 @@
+<<!-- web_app/templates/layout.html -->
+
 <!doctype html>
 <html>
   <head>
     {% block title %}
-      <title>My Starter Web App |  learning how to use the Flask Python package.</title>
+      <title>My Starter Web App | Helps students learn how to use the Flask Python package.</title>
     {% endblock %}
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
 
   <body>
+    <!-- FLASH MESSAGING -->
+    <!-- see: http://flask.pocoo.org/docs/1.0/patterns/flashing/#flashing-with-categories -->
+    <!-- see: https://getbootstrap.com/docs/4.3/components/alerts/ -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
 
     <!-- SITE NAVIGATION -->
     <div class="container">
@@ -35,5 +52,17 @@
       </div>
     </div>
 
+    <!-- JAVASCRIPT SECTION -->
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+
+        console.log("Thanks for the page visit!")
+
+        // closes data-dismiss="alert" flash messages
+        // see: https://getbootstrap.com/docs/4.3/components/alerts/#javascript-behavior
+        //$().alert('close')
+
+    </script>
   </body>
 </html>
