--- a/web_app/templates/new_book.html
+++ b/web_app/templates/new_book.html
@@ -1,8 +1,17 @@
-{% extends "layout.html" %}
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  {% extends "layout.html" %}
 
 {% block content %}
-
-    <h1>New Book Page</h1>
+  <h1>New Book Page</h1>
 
     <p>Please fill out the form and submit to create a new book!</p>
 
@@ -21,3 +30,6 @@
         <button>Submit</button>
     </form>
 {% endblock %}
+</body>
+</html>
+    
