updated prediction model

--- a/web_app/templates/prediction_form.html
+++ b/web_app/templates/prediction_form.html
@@ -33,7 +33,7 @@
         <br>
 
         <label>Hypothetical Tweet Text:</label>
-        <input type="text" name="tweet_text" placeholder="Type in the statement you want to predict here" value="Type in the statement you want to predict here">
+        <input type="text" name="tweet_text" placeholder="insert statement you want to predict here" value="Type in the statement you want to predict here">
         <br>
 
         <button>Submit</button>
