--- a/web_app/templates/books.html
+++ b/web_app/templates/books.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% extends "layout.html" %}
 
-{% block title %}
-    <title>Books Page</title>
-{% endblock %}
+
+{% extends "bootstrap_layout.html" %}
+{% set active_page = "books" %}
 
 {% block content %}
 
@@ -30,5 +21,3 @@
     {% endif %}
 
 {% endblock %}
-</body>
-</html>
