--- a/web_app/templates/new_book.html
+++ b/web_app/templates/new_book.html
@@ -1,16 +1,5 @@
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  {% extends "layout.html" %}
-
-{% block content %}
+{% extends "bootstrap_layout.html" %}
+{% set active_page = "new_book" %}
   <h1>New Book Page</h1>
 
     <p>Please fill out the form and submit to create a new book!</p>
