--- a/web_app/templates/prediction_form.html
+++ b/web_app/templates/prediction_form.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% extends "layout.html" %}
+{% extends "bootstrap_layout.html" %}
+{% set active_page = "prediction_form" %}
 
 {% block content %}
     <h2>Prediction Time</h2>
@@ -18,8 +11,8 @@
         <!-- TODO: Instead of hard-coding these drop-down menu options, dynamically populate them based on user records from the database -->
         <label>Twitter User A:</label>
         <select name="screen_name_a">
-            <option value="bigkahunachills">Chris</option>
-            <option value="RowaisHanna"selected="true">Rowais</option>
+            <option value="justinbieber"selected="true">@justinbieber</option>
+            <option value="s2t2">@s2t2</option>
             
         </select>
         <br>
@@ -27,8 +20,8 @@
         <!-- TODO: Instead of hard-coding these drop-down menu options, dynamically populate them based on user records from the database -->
         <label>Twitter User B:</label>
         <select name="screen_name_b">
-            <option value="bigkahunachills"selected="true">Chris</option>
-            <option value="RowaisHanna">Rowais</option>
+            <option value="justinbieber"selected="true">@justinbieber</option>
+            <option value="s2t2">@s2t2</option>
           </select>
         <br>
 
