--- a/web_app/templates/prediction_results.html
+++ b/web_app/templates/prediction_results.html
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- web_app/templates/prediction_results.html -->
-
-{% extends "layout.html" %}
+{% extends "bootstrap_layout.html" %}
+{% set active_page = "prediction_results" %}
 
 {% block content %}
     <h2>Results!</h2>
 
-    <p> Based on data from their last 1000 tweets, between '{{ screen_name_a }}' and '{{ screen_name_b }}',
+    <p> Based on data from their last 200 tweets, between '{{ screen_name_a }}' and '{{ screen_name_b }}',
         the person who is most likely to say '{{ tweet_text }}'
         is '{{ screen_name_most_likely }}'
     </p>
