instructing heroku how to run web_app

--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     {% block title %}
-      <title>My Starter Web App | Helps students learn how to use the Flask Python package.</title>
+      <title>My Twitoff App!</title>
     {% endblock %}
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -29,7 +29,7 @@
     <div class="container">
       <div id="nav">
         {% block nav %}
-          <h1><a href="/">My Web App</a></h1>
+          <h1><a href="/">Twit-off App!</a></h1>
           <ul>
             <li><a href="/books">Books Page</a></li>
             <li><a href="/books/new">New Book Form</a></li>
