--- a/web_app/templates/bootstrap_layout.html
+++ b/web_app/templates/bootstrap_layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     {% block title %}
-      <title>My First Web App .</title>
+      <title>Rowais' Twitoff App</title>
     {% endblock %}
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -32,7 +32,7 @@
       ('/books/new', 'new_book', 'New Book')
     ] -%}
     {% set active_page = active_page|default('index') -%}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="/">My Web App</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
